--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
-.DS_Store
 node_modules
-.svelte-kit
+
+# Output
+.output
 .vercel
+/.svelte-kit
 /build
-/public
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+
+pnpm-lock.yaml
